parser.output
Grammar

    0 $accept: Program $end

    1 Program: VarDeclList StmtList

    2 VarDeclList: ε
    3            | VarDecl VarDeclList

    4 VarDecl: TYPE ID SEMI
    5        | ARRAY TYPE ID LBRACKET INT_NUMBER RBRACKET SEMI
    6        | TYPE ID

    7 StmtList: ε
    8         | Stmt StmtList

    9 Stmt: ID ASSIGN Expr SEMI
   10     | ID LBRACKET Expr RBRACKET ASSIGN Expr SEMI
   11     | WRITE ID SEMI

   12 Expr: Expr PLUS Expr
   13     | Expr MINUS Expr
   14     | Expr MULTIPLY Expr
   15     | Expr DIVIDE Expr
   16     | ID
   17     | ID LBRACKET Expr RBRACKET
   18     | INT_NUMBER
   19     | FLOAT_NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <sval> (258) 4 5 6
    ID <sval> (259) 4 5 6 9 10 11 16 17
    SEMI (260) 4 5 9 10 11
    ASSIGN <sval> (261) 9 10
    INT_NUMBER <intVal> (262) 5 18
    FLOAT_NUMBER <floatVal> (263) 19
    WRITE (264) 11
    ARRAY (265) 5
    LBRACKET (266) 5 10 17
    RBRACKET (267) 5 10 17
    PLUS <sval> (268) 12
    MINUS <sval> (269) 13
    MULTIPLY <sval> (270) 14
    DIVIDE <sval> (271) 15


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    Program <ast> (18)
        on left: 1
        on right: 0
    VarDeclList <ast> (19)
        on left: 2 3
        on right: 1 3
    VarDecl <ast> (20)
        on left: 4 5 6
        on right: 3
    StmtList <ast> (21)
        on left: 7 8
        on right: 1 8
    Stmt <ast> (22)
        on left: 9 10 11
        on right: 8
    Expr <ast> (23)
        on left: 12 13 14 15 16 17 18 19
        on right: 9 10 12 13 14 15 17


State 0

    0 $accept: • Program $end

    TYPE   shift, and go to state 1
    ARRAY  shift, and go to state 2

    $default  reduce using rule 2 (VarDeclList)

    Program      go to state 3
    VarDeclList  go to state 4
    VarDecl      go to state 5


State 1

    4 VarDecl: TYPE • ID SEMI
    6        | TYPE • ID

    ID  shift, and go to state 6


State 2

    5 VarDecl: ARRAY • TYPE ID LBRACKET INT_NUMBER RBRACKET SEMI

    TYPE  shift, and go to state 7


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 8


State 4

    1 Program: VarDeclList • StmtList

    ID     shift, and go to state 9
    WRITE  shift, and go to state 10

    $default  reduce using rule 7 (StmtList)

    StmtList  go to state 11
    Stmt      go to state 12


State 5

    3 VarDeclList: VarDecl • VarDeclList

    TYPE   shift, and go to state 1
    ARRAY  shift, and go to state 2

    $default  reduce using rule 2 (VarDeclList)

    VarDeclList  go to state 13
    VarDecl      go to state 5


State 6

    4 VarDecl: TYPE ID • SEMI
    6        | TYPE ID •

    SEMI  shift, and go to state 14

    $default  reduce using rule 6 (VarDecl)


State 7

    5 VarDecl: ARRAY TYPE • ID LBRACKET INT_NUMBER RBRACKET SEMI

    ID  shift, and go to state 15


State 8

    0 $accept: Program $end •

    $default  accept


State 9

    9 Stmt: ID • ASSIGN Expr SEMI
   10     | ID • LBRACKET Expr RBRACKET ASSIGN Expr SEMI

    ASSIGN    shift, and go to state 16
    LBRACKET  shift, and go to state 17


State 10

   11 Stmt: WRITE • ID SEMI

    ID  shift, and go to state 18


State 11

    1 Program: VarDeclList StmtList •

    $default  reduce using rule 1 (Program)


State 12

    8 StmtList: Stmt • StmtList

    ID     shift, and go to state 9
    WRITE  shift, and go to state 10

    $default  reduce using rule 7 (StmtList)

    StmtList  go to state 19
    Stmt      go to state 12


State 13

    3 VarDeclList: VarDecl VarDeclList •

    $default  reduce using rule 3 (VarDeclList)


State 14

    4 VarDecl: TYPE ID SEMI •

    $default  reduce using rule 4 (VarDecl)


State 15

    5 VarDecl: ARRAY TYPE ID • LBRACKET INT_NUMBER RBRACKET SEMI

    LBRACKET  shift, and go to state 20


State 16

    9 Stmt: ID ASSIGN • Expr SEMI

    ID            shift, and go to state 21
    INT_NUMBER    shift, and go to state 22
    FLOAT_NUMBER  shift, and go to state 23

    Expr  go to state 24


State 17

   10 Stmt: ID LBRACKET • Expr RBRACKET ASSIGN Expr SEMI

    ID            shift, and go to state 21
    INT_NUMBER    shift, and go to state 22
    FLOAT_NUMBER  shift, and go to state 23

    Expr  go to state 25


State 18

   11 Stmt: WRITE ID • SEMI

    SEMI  shift, and go to state 26


State 19

    8 StmtList: Stmt StmtList •

    $default  reduce using rule 8 (StmtList)


State 20

    5 VarDecl: ARRAY TYPE ID LBRACKET • INT_NUMBER RBRACKET SEMI

    INT_NUMBER  shift, and go to state 27


State 21

   16 Expr: ID •
   17     | ID • LBRACKET Expr RBRACKET

    LBRACKET  shift, and go to state 28

    $default  reduce using rule 16 (Expr)


State 22

   18 Expr: INT_NUMBER •

    $default  reduce using rule 18 (Expr)


State 23

   19 Expr: FLOAT_NUMBER •

    $default  reduce using rule 19 (Expr)


State 24

    9 Stmt: ID ASSIGN Expr • SEMI
   12 Expr: Expr • PLUS Expr
   13     | Expr • MINUS Expr
   14     | Expr • MULTIPLY Expr
   15     | Expr • DIVIDE Expr

    SEMI      shift, and go to state 29
    PLUS      shift, and go to state 30
    MINUS     shift, and go to state 31
    MULTIPLY  shift, and go to state 32
    DIVIDE    shift, and go to state 33


State 25

   10 Stmt: ID LBRACKET Expr • RBRACKET ASSIGN Expr SEMI
   12 Expr: Expr • PLUS Expr
   13     | Expr • MINUS Expr
   14     | Expr • MULTIPLY Expr
   15     | Expr • DIVIDE Expr

    RBRACKET  shift, and go to state 34
    PLUS      shift, and go to state 30
    MINUS     shift, and go to state 31
    MULTIPLY  shift, and go to state 32
    DIVIDE    shift, and go to state 33


State 26

   11 Stmt: WRITE ID SEMI •

    $default  reduce using rule 11 (Stmt)


State 27

    5 VarDecl: ARRAY TYPE ID LBRACKET INT_NUMBER • RBRACKET SEMI

    RBRACKET  shift, and go to state 35


State 28

   17 Expr: ID LBRACKET • Expr RBRACKET

    ID            shift, and go to state 21
    INT_NUMBER    shift, and go to state 22
    FLOAT_NUMBER  shift, and go to state 23

    Expr  go to state 36


State 29

    9 Stmt: ID ASSIGN Expr SEMI •

    $default  reduce using rule 9 (Stmt)


State 30

   12 Expr: Expr PLUS • Expr

    ID            shift, and go to state 21
    INT_NUMBER    shift, and go to state 22
    FLOAT_NUMBER  shift, and go to state 23

    Expr  go to state 37


State 31

   13 Expr: Expr MINUS • Expr

    ID            shift, and go to state 21
    INT_NUMBER    shift, and go to state 22
    FLOAT_NUMBER  shift, and go to state 23

    Expr  go to state 38


State 32

   14 Expr: Expr MULTIPLY • Expr

    ID            shift, and go to state 21
    INT_NUMBER    shift, and go to state 22
    FLOAT_NUMBER  shift, and go to state 23

    Expr  go to state 39


State 33

   15 Expr: Expr DIVIDE • Expr

    ID            shift, and go to state 21
    INT_NUMBER    shift, and go to state 22
    FLOAT_NUMBER  shift, and go to state 23

    Expr  go to state 40


State 34

   10 Stmt: ID LBRACKET Expr RBRACKET • ASSIGN Expr SEMI

    ASSIGN  shift, and go to state 41


State 35

    5 VarDecl: ARRAY TYPE ID LBRACKET INT_NUMBER RBRACKET • SEMI

    SEMI  shift, and go to state 42


State 36

   12 Expr: Expr • PLUS Expr
   13     | Expr • MINUS Expr
   14     | Expr • MULTIPLY Expr
   15     | Expr • DIVIDE Expr
   17     | ID LBRACKET Expr • RBRACKET

    RBRACKET  shift, and go to state 43
    PLUS      shift, and go to state 30
    MINUS     shift, and go to state 31
    MULTIPLY  shift, and go to state 32
    DIVIDE    shift, and go to state 33


State 37

   12 Expr: Expr • PLUS Expr
   12     | Expr PLUS Expr •
   13     | Expr • MINUS Expr
   14     | Expr • MULTIPLY Expr
   15     | Expr • DIVIDE Expr

    MULTIPLY  shift, and go to state 32
    DIVIDE    shift, and go to state 33

    $default  reduce using rule 12 (Expr)


State 38

   12 Expr: Expr • PLUS Expr
   13     | Expr • MINUS Expr
   13     | Expr MINUS Expr •
   14     | Expr • MULTIPLY Expr
   15     | Expr • DIVIDE Expr

    MULTIPLY  shift, and go to state 32
    DIVIDE    shift, and go to state 33

    $default  reduce using rule 13 (Expr)


State 39

   12 Expr: Expr • PLUS Expr
   13     | Expr • MINUS Expr
   14     | Expr • MULTIPLY Expr
   14     | Expr MULTIPLY Expr •
   15     | Expr • DIVIDE Expr

    $default  reduce using rule 14 (Expr)


State 40

   12 Expr: Expr • PLUS Expr
   13     | Expr • MINUS Expr
   14     | Expr • MULTIPLY Expr
   15     | Expr • DIVIDE Expr
   15     | Expr DIVIDE Expr •

    $default  reduce using rule 15 (Expr)


State 41

   10 Stmt: ID LBRACKET Expr RBRACKET ASSIGN • Expr SEMI

    ID            shift, and go to state 21
    INT_NUMBER    shift, and go to state 22
    FLOAT_NUMBER  shift, and go to state 23

    Expr  go to state 44


State 42

    5 VarDecl: ARRAY TYPE ID LBRACKET INT_NUMBER RBRACKET SEMI •

    $default  reduce using rule 5 (VarDecl)


State 43

   17 Expr: ID LBRACKET Expr RBRACKET •

    $default  reduce using rule 17 (Expr)


State 44

   10 Stmt: ID LBRACKET Expr RBRACKET ASSIGN Expr • SEMI
   12 Expr: Expr • PLUS Expr
   13     | Expr • MINUS Expr
   14     | Expr • MULTIPLY Expr
   15     | Expr • DIVIDE Expr

    SEMI      shift, and go to state 45
    PLUS      shift, and go to state 30
    MINUS     shift, and go to state 31
    MULTIPLY  shift, and go to state 32
    DIVIDE    shift, and go to state 33


State 45

   10 Stmt: ID LBRACKET Expr RBRACKET ASSIGN Expr SEMI •

    $default  reduce using rule 10 (Stmt)
